--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webdriverjs": "^1.7.5",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "twilio": "^3.28.1"
   }
 }
